[gd_scene load_steps=7 format=3 uid="uid://djktkpfea03nu"]

[ext_resource type="Script" uid="uid://8m7qjvdh5fn8" path="res://scripts/wardrobe/hook_item.gd" id="1"]
[ext_resource type="Script" uid="uid://cio6mjjwij4eb" path="res://scripts/wardrobe/slot.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dfp2x8jbfnx2f" path="res://assets/sprites/wardrobe.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cjfp2ixu8julx" path="res://assets/sprites/doublehook.png" id="4"]
[ext_resource type="Texture2D" uid="uid://ckyaef5gy7qrw" path="res://assets/sprites/placeholder/slot.png" id="5"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(80, 160)

[node name="HookItem" type="Node2D"]
script = ExtResource("1")

[node name="WardrobeSprite" type="Sprite2D" parent="."]
position = Vector2(-40, -80)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3")
centered = false

[node name="HookSprite" type="Sprite2D" parent="."]
position = Vector2(0, -32.000004)
scale = Vector2(0.8, 0.8)
texture = ExtResource("4")

[node name="SlotA" type="Node2D" parent="HookSprite"]
position = Vector2(-22, 12)
script = ExtResource("2")

[node name="SlotSprite" type="Sprite2D" parent="HookSprite/SlotA"]
scale = Vector2(0.32, 0.32)
texture = ExtResource("5")

[node name="ItemAnchor" type="Node2D" parent="HookSprite/SlotA"]

[node name="SlotB" type="Node2D" parent="HookSprite"]
position = Vector2(22, 12)
script = ExtResource("2")

[node name="SlotSprite" type="Sprite2D" parent="HookSprite/SlotB"]
scale = Vector2(0.32, 0.32)
texture = ExtResource("5")

[node name="ItemAnchor" type="Node2D" parent="HookSprite/SlotB"]

[node name="CollisionBody" type="StaticBody2D" parent="."]
position = Vector2(0, -54)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionBody"]
position = Vector2(0, 54)
shape = SubResource("1")
